# loiterbot

./: README.md  TODO.txt
scripts/: start.sh  test.sh
src/loiterbot/: CMakeLists.txt  package.xml
src/loiterbot/include/loiterbot/: action.h  action.hpp  history.h  history.hpp
src/loiterbot/include/loiterbot/fsm/: state.hpp
src/loiterbot/include/loiterbot/fsm/statehandler/: state_handler.h  state_handler.hpp  state_handler_blocked.hpp  state_handler_change_direction.hpp  state_handler_error.h  state_handler_error.hpp  state_handler_go.hpp  state_handler_just_go.hpp  state_handler_near.h  state_handler_near.hpp  state_handler_search.hpp  state_handler_too_near.h  state_handler_too_near.hpp  state_handlers.h  state_handlers.hpp
src/loiterbot/include/loiterbot/laser/: laser_analysis.h  laser_analysis.hpp  laser_analyzer.h  laser_analyzer.hpp  laser_characteristics.hpp
src/loiterbot/include/loiterbot/obstacle/: nearest_sighting.hpp
src/loiterbot/include/loiterbot/vector/: vector_by_magnitude_angle.hpp  vector_by_standard_position.hpp  vector_converter.hpp
src/loiterbot/include/loiterbot/velocity/: velocity.h  velocity.hpp  velocity_calculator.h  velocity_calculator.hpp
src/loiterbot/include/loiterbot/velocity/vff/: vector.hpp  vector_converter.hpp  vector_force_field_calculator.hpp  vff.hpp  vff_vector_calculator.hpp
src/loiterbot/src/: action.cpp  history.cpp  loiterbot.cpp
src/loiterbot/src/fsm/statehandler/: state_handler_blocked.cpp  state_handler_change_direction.cpp  state_handler_error.cpp  state_handler_go.cpp  state_handler_just_go.cpp  state_handler_near.cpp  state_handler_search.cpp  state_handler_too_near.cpp  state_handlers.cpp
src/loiterbot/src/laser/: laser_analysis.cpp  laser_analysis.h  laser_analyzer.cpp  laser_analyzer.h  laser_characteristics.cpp  laser_characteristics.h
src/loiterbot/src/loiterbot/: action.cpp  action.h  history.cpp  history.h  loiterbot.cpp  state.h
src/loiterbot/src/loiterbot/statehandler/: state_handler.h  state_handler_error.cpp  state_handler_error.h  state_handler_near.cpp  state_handler_near.h  state_handler_search.cpp  state_handler_search.h  state_handler_too_near.cpp  state_handler_too_near.h  state_handlers.cpp  state_handlers.h
src/loiterbot/src/obstacle/: nearest_sighting.cpp  nearest_sighting.h
src/loiterbot/src/vector/: vector_by_magnitude_angle.cpp  vector_by_standard_position.cpp  vector_converter.cpp
src/loiterbot/src/velocity/: velocity.cpp  velocity_calculator.cpp  velocity_calculator.h
src/loiterbot/src/velocity/vff/: vector.cpp  vector_by_magnitude_angle.cpp  vector_by_standard_position.cpp  vector_converter.cpp  vector_force_field_calculator.cpp  vff.cpp  vff_vector_calculator.cpp  vff_velocity_calculator.cpp
src/loiterbot/tests/: CMakeLists.txt  test_constants.hpp
src/loiterbot/tests/laser/: laser_test.cpp
src/loiterbot/tests/loiterbot/state/: state_near_test.cpp  state_search_test.cpp  state_too_near_test.cpp
src/loiterbot/tests/loiterbot/statehandler/: state_handler_near_test.cpp  state_handler_search_test.cpp  state_handler_too_near_test.cpp
src/loiterbot/tests/statehandler/: state_handler_blocked_test.cpp  state_handler_go_test.cpp  state_handler_just_go_test.cpp  state_handler_near_test.cpp  state_handler_search_test.cpp  state_handler_too_near_test.cpp
src/loiterbot/tests/velocity/: velocity_calculator_test.cpp
src/loiterbot/tests/velocity/vff/: vector_converter_test.cpp  vector_force_field_calculator_test.cpp  vector_unittest.cpp  vff_calculator_test.cpp  vff_unittest.cpp
